# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
gendiff/: gendiff.py
gendiff/scripts/: gendiff.py
hexlet_code/scripts/: gendiff.py
tests/: test_gendiff.py
