[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["gleboss-redfab <gleb.v@redfab.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
