[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["gleboss-redfab <gleb.v@redfab.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]


[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
